Bugfix on mobile

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -3,10 +3,10 @@ table {
 }
 
 .maincontainer {
+  margin-top: 10vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
 }
 
 .card {
